--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,7 +23,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
-  flutter_datetime_picker: ^1.2.6
+  intl: ^0.15.7
+  table_calendar: ^2.0.1
 
 dev_dependencies:
   flutter_test:
