--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   intl: ^0.15.7
   table_calendar: ^2.0.1
+  http: ^0.12.0+2
 
 dev_dependencies:
   flutter_test:
