--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   intl: ^0.15.7
   table_calendar: ^2.0.1
   http: ^0.12.0+2
+  carousel_slider: ^1.3.1
 
 dev_dependencies:
   flutter_test:
