--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,7 +27,8 @@ dependencies:
   table_calendar: ^2.0.1
   http: ^0.12.0+2
   carousel_slider: ^1.3.1
-  sembast: ^2.1.0
+  sembast: ^2.1.0+1
+  path_provider: ^1.4.0
 
 dev_dependencies:
   flutter_test:
