--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   carousel_slider: ^1.3.1
   sembast: ^2.1.0+1
   path_provider: ^1.4.0
+  flutter_spinkit: ^4.0.0
 
 dev_dependencies:
   flutter_test:
