--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   sembast: ^2.1.0+1
   path_provider: ^1.4.0
   flutter_spinkit: ^4.0.0
+  image_picker:
 
 dev_dependencies:
   flutter_test:
