--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ description: A new Flutter project.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.1.0 <3.0.0"
+  sdk: ">=2.3.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -22,14 +22,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  intl: ^0.15.7
-  table_calendar: ^2.0.1
-  http: ^0.12.0+2
-  carousel_slider: ^1.3.1
-  sembast: ^2.1.0+1
-  path_provider: ^1.4.0
-  flutter_spinkit: ^4.0.0
+  cupertino_icons: 
+  intl: 
+  table_calendar: 
+  http: 
+  carousel_slider: 
+  sembast: 
+  path_provider: 
+  flutter_spinkit: 
   image_picker:
 
 dev_dependencies:
