--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,15 +22,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: 
-  intl: 
-  table_calendar: 
-  http: 
-  carousel_slider: 
-  sembast: 
-  path_provider: 
-  flutter_spinkit: 
-  image_picker:
+  cupertino_icons: 0.1.2
+  intl: 0.16.0
+  table_calendar: 2.2.1
+  http: 0.12.0
+  carousel_slider: 1.3.1
+  sembast: 2.1.2
+  path_provider: 1.5.1
+  flutter_spinkit: 4.1.1
+  image_picker: 0.6.2
 
 dev_dependencies:
   flutter_test:
